--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,10 +19,11 @@
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-awesome-button": "^7.0.5",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "recharts": "^2.0.0",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7",
-    "recharts": "^2.0.0"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
