--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,12 +12,15 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "anki-apkg-export": "^4.0.3",
     "axios": "^1.7.9",
     "bcryptjs": "^3.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-oauth2-jwt-bearer": "^1.6.0",
+    "fs": "^0.0.1-security",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
     "passport": "^0.7.0",
