--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.4",
+    "anki-apkg-export": "^4.0.3",
     "axios": "^1.7.9",
     "bcryptjs": "^3.0.0",
     "chart.js": "^4.4.7",
@@ -11,6 +12,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "google-auth-library": "^9.15.1",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
     "react-chartjs-2": "^5.3.0",
