--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,12 +14,14 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "ldrs": "^1.0.2",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-awesome-button": "^7.0.5",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
     "tailwind-merge": "^3.0.1",
